Added menu to all pages and basic styling to page and headers.

--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,28 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Gallery - Powers Gym</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Powers Gym</h1>
+        </a>
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href="#">Visit</a>
+                </li>
+                <li>
+                    <a href="gallery.html" class="active">Gallery</a>
+                </li>
+                <li>
+                    <a href="enquire.html">Enquire</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
