--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
         <a href="index.html">
             <h1 id="logo">Powers Gym</h1>
         </a>
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href="#">Visit</a>
+                </li>
+                <li>
+                    <a href="gallery.html">Gallery</a>
+                </li>
+                <li>
+                    <a href="enquire.html">Enquire</a>
+                </li>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <section></section>
     <section></section>
