--- a/enquire.html
+++ b/enquire.html
@@ -8,7 +8,28 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Enquire - Powers Gym</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Powers Gym</h1>
+        </a>
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href="#">Visit</a>
+                </li>
+                <li>
+                    <a href="gallery.html">Gallery</a>
+                </li>
+                <li>
+                    <a href="enquire.html" class="active">Enquire</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
