Added layout to treadmil image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
             </ul>
         </nav>
     </header>
-    <section></section>
+    <section id="treadmil-outer">
+        <div id="treadmil-image"></div>
+        <div id="cover-text">
+            <h2>Powers Gym</h2>
+            <h3>Number 1 Gym for Woodford & Redbridge</h3>
+        </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
