Reordered menu and applied to all pages

--- a/enquires.html
+++ b/enquires.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Gallery - Powers Gym</title>
+    <title>Enquire - Powers Gym</title>
 </head>
 
 <body>
     <header>
         <nav id="menu">
-            <a href="index.html" >Home</a>
-            <a href="gallery.html" class="active">Gallery</a>
+            <a href="index.html">Home</a>
+            <a href="gallery.html">Gallery</a>
             <div href="index.html">
                     <h1 id="logo">Powers Gym</h1>
             </div>
-            <a href="enquires.html">Enquires</a>
+            <a href="enquires.html" class="active">Enquires</a>
             <a href="#">Visit</a>
         </nav>
     </header>
