--- a/index.html
+++ b/index.html
@@ -13,24 +13,14 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <h1 id="logo">Powers Gym</h1>
-        </a>
         <nav id="menu">
-            <ul>
-                <li>
-                    <a href="#">Visit</a>
-                </li>
-                <li>
-                    <a href="gallery.html">Gallery</a>
-                </li>
-                <li>
-                    <a href="enquire.html">Enquire</a>
-                </li>
-                <li>
-                    <a href="index.html" class="active">Home</a>
-                </li>
-            </ul>
+            <a href="index.html" class="active">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <div href="index.html">
+                    <h1 id="logo">Powers Gym</h1>
+            </div>
+            <a href="enquires.html">Enquires</a>
+            <a href="#">Visit</a>
         </nav>
     </header>
     <section id="treadmil-outer">
