Basic structure of benefits section added and styled

--- a/index.html
+++ b/index.html
@@ -30,9 +30,20 @@
             <h3>Number 1 Gym for Woodford & Redbridge</h3>
         </div>
     </section>
-    <section></section>
-    <section></section>
-    <section></section>
+    <section id="benefits">
+        <h2>Benefits of being with us.</h2>
+        <div id="benefits-wrap">
+            <img src="assets/images/personal-trainer.jpg" alt="A young lady working out on resistance ropes while being encouraged by personal trainer.">
+            <div>
+                <h3>Personal Trainers for all</h3>
+                <p>
+                    Our fully trained and experienced personal trainers are available to all of our members. Using our website or by visiting reception next time you come in, you will be able to speak to a member of staff and arrange a session time which best suits you. It does not matter if you are building muscle or working cardio, we have a personal trainer for you.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section>Classes</section>
+    <section>Map</section>
     <footer></footer>
 </body>
 </html>
