--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="You'r local gym and community serving the Woodford and Redbridge area.">
-    <meta name="keywords" content="gym, classes, excerise, woodford, redbridge, training">
+    <meta name="keywords" content="gym, classes, exercise, woodford, redbridge, training">
     
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Powers Gym</title>
@@ -35,9 +35,23 @@
         <div id="benefits-wrap">
             <img src="assets/images/personal-trainer.jpg" alt="A young lady working out on resistance ropes while being encouraged by personal trainer.">
             <div>
-                <h3>Personal Trainers for all</h3>
+                <h3>Personal Trainers for all <hr><i class="fa-solid fa-people-group"></i></h3>
                 <p>
                     Our fully trained and experienced personal trainers are available to all of our members. Using our website or by visiting reception next time you come in, you will be able to speak to a member of staff and arrange a session time which best suits you. It does not matter if you are building muscle or working cardio, we have a personal trainer for you.
+                </p>
+            </div>
+            <img src="assets/images/gym-equiptment.jpg" alt="Man working on a sholder press resistance machine">
+            <div>
+                <h3>Fully supplied gym equiptment <hr><i class="fa-solid fa-dumbbell"></i></h3>
+                <p>
+                    State of the art equiptment for all experiences. Come in and use your favouite machines at all times of the day. Cleaned twice a day to ensure a safe and suitable enviroment for you to exercise in. 
+                </p>
+            </div>
+            <img src="assets/images/two-girls-laughing.jpg" alt="Two young ladies laugh after a workout in the gym">
+            <div>
+                <h3>Increase your Mental & Physical health <i class="fa-solid fa-heart-pulse"></i></h3>
+                <p>
+                    Research has found an obvious link between your physical health and your mental health. Doing weekly exercise greatly enhances mental wellbeing, greatly improving own quality of life aswell as those around you.
                 </p>
             </div>
         </div>
@@ -45,5 +59,8 @@
     <section>Classes</section>
     <section>Map</section>
     <footer></footer>
+
+    <!-- font awsome script -->
+    <script src="https://kit.fontawesome.com/23a0e3507f.js" crossorigin="anonymous"></script>
 </body>
 </html>
