--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h1 id="logo">Powers Gym</h1>
             </div>
             <a href="enquires.html">Enquires</a>
-            <a href="#">Visit</a>
+            <a href="#visit">Visit</a>
         </nav>
     </header>
     <section id="treadmil-outer">
@@ -56,11 +56,56 @@
             </div>
         </div>
     </section>
-    <section>Classes</section>
-    <section>Map</section>
+    <section id="classes">
+        <div>
+            <h3>Monday</h3>
+            <h4>Swimming</h4>
+            <h4>4pm - 6pm</h4>
+            <h4>All ages</h4>
+            <h4><i class="fa-solid fa-person-swimming"></i></h4>
+        </div>
+        <div>
+            <h3>Tuesday</h3>
+            <h4>Yoga</h4>
+            <h4>12pm - 2pm</h4>
+            <h4>Adults</h4>
+            <h4><i class="fa-solid fa-spa"></i></h4>
+        </div>
+        <div>
+            <h3>Wednesday</h3>
+            <h4>Spin</h4>
+            <h4>6pm - 8pm</h4>
+            <h4>Adults</h4>
+            <h4><i class="fa-solid fa-bicycle"></i></h4>
+        </div>
+        <div>
+            <h3>Thursday</h3>
+            <h4>Yoga</h4>
+            <h4>1pm - 4pm</h4>
+            <h4>Adults</h4>
+            <h4><i class="fa-solid fa-spa"></i></h4>
+        </div>
+        <div>
+            <h3>Friday</h3>
+            <h4>Swimming</h4>
+            <h4>9am - 1pm</h4>
+            <h4>Adults</h4>
+            <h4><i class="fa-solid fa-person-swimming"></i></h4>
+        </div>
+        <div>
+            <h3>Saturday</h3>
+            <h4>Swimming</h4>
+            <h4>All Day</h4>
+            <h4>All Ages</h4>
+            <h4><i class="fa-solid fa-person-swimming"></i></h4>
+        </div>
+    </section>
+    <section>
+        <iframe id="visit" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19828.455016430587!2d0.05123791039950681!3d51.59468427476562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sse!4v1647972893971!5m2!1sen!2sse" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </section>
     <footer></footer>
 
     <!-- font awsome script -->
-    <script src="https://kit.fontawesome.com/23a0e3507f.js" crossorigin="anonymous"></script>
+    <script id="visit" src="https://kit.fontawesome.com/23a0e3507f.js" crossorigin="anonymous"></script>
 </body>
 </html>
