--- a/index.html
+++ b/index.html
@@ -103,7 +103,35 @@
     <section>
         <iframe id="visit" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19828.455016430587!2d0.05123791039950681!3d51.59468427476562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sse!4v1647972893971!5m2!1sen!2sse" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
-    <footer></footer>
+    <section>
+        <div id="find">
+            <h3>Find us <i class="fa-solid fa-location-crosshairs"></i></h3>
+            <h4>1 Canfield Road, <hr>Woodford, <hr>Essex, <hr>IG8 8JQ</h4>
+        </div>
+        <div id="times">
+            <h3>Opening Times <i class="fa-solid fa-clock"></i></h3>
+            <h4>We are open 24/7 (except bank holidays)</h4>
+            <h3>Contact us <i class="fa-solid fa-address-book"></i></h3>
+            <h4>Phone: 0208 123 4567</h4>
+            <h4>Email: joshsandhulindholm@gmail.com</h4>
+        </div>
+    </section>
+    <footer>
+        <ul class="social-networks">
+            <li>
+                <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (Opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (Opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="http://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube channel (Opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (Opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
 
     <!-- font awsome script -->
     <script id="visit" src="https://kit.fontawesome.com/23a0e3507f.js" crossorigin="anonymous"></script>
