Added styling to about section and fixed bug with footer. All internal links done.

--- a/enquires.html
+++ b/enquires.html
@@ -12,13 +12,13 @@
 <body>
     <header>
         <nav id="menu">
-            <a href="index.html">Home</a>
-            <a href="gallery.html">Gallery</a>
-            <div href="index.html">
-                    <h1 id="logo">Powers Gym</h1>
+            <a href="index.html" class="menu-select">Home</a>
+            <a href="index.html#classes" class="menu-select">Classes</a>
+            <div>
+                <a href="index.html"><h1 id="logo">Powers Gym</h1></a>
             </div>
-            <a href="enquires.html" class="active">Enquires</a>
-            <a href="#">Visit</a>
+            <a href="enquires.html" class="active menu-select">Enquires</a>
+            <a href="index.html#visit" class="menu-select">Visit</a>
         </nav>
     </header>
 </body>
