--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
 <body>
     <header>
         <nav id="menu">
-            <a href="index.html" class="active">Home</a>
-            <a href="gallery.html">Gallery</a>
-            <div href="index.html">
-                    <h1 id="logo">Powers Gym</h1>
+            <a href="index.html" class="active menu-select">Home</a>
+            <a href="#classes" class="menu-select">Classes</a>
+            <div>
+                <a href="index.html"><h1 id="logo">Powers Gym</h1></a>
             </div>
-            <a href="enquires.html">Enquires</a>
-            <a href="#visit">Visit</a>
+            <a href="enquires.html" class="menu-select">Enquires</a>
+            <a href="#visit" class="menu-select">Visit</a>
         </nav>
     </header>
-    <section id="treadmil-outer">
+    <div id="treadmil-outer">
         <div id="treadmil-image"></div>
         <div id="cover-text">
             <h2>Powers Gym</h2>
             <h3>Number 1 Gym for Woodford & Redbridge</h3>
         </div>
-    </section>
+    </div>
     <section id="benefits">
-        <h2>Benefits of being with us.</h2>
+        <h2 class="section-heading">Benefits of being with us.</h2>
         <div id="benefits-wrap">
             <img src="assets/images/personal-trainer.jpg" alt="A young lady working out on resistance ropes while being encouraged by personal trainer.">
             <div>
@@ -56,7 +56,7 @@
             </div>
         </div>
     </section>
-    <section id="classes">
+    <div id="classes">
         <div>
             <h3>Monday</h3>
             <h4>Swimming</h4>
@@ -99,11 +99,11 @@
             <h4>All Ages</h4>
             <h4><i class="fa-solid fa-person-swimming"></i></h4>
         </div>
-    </section>
-    <section>
+    </div>
+    <div>
         <iframe id="visit" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19828.455016430587!2d0.05123791039950681!3d51.59468427476562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sse!4v1647972893971!5m2!1sen!2sse" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </section>
-    <section>
+    </div>
+    <div id="about-us">
         <div id="find">
             <h3>Find us <i class="fa-solid fa-location-crosshairs"></i></h3>
             <h4>1 Canfield Road, <hr>Woodford, <hr>Essex, <hr>IG8 8JQ</h4>
@@ -115,7 +115,7 @@
             <h4>Phone: 0208 123 4567</h4>
             <h4>Email: joshsandhulindholm@gmail.com</h4>
         </div>
-    </section>
+    </div>
     <footer>
         <ul class="social-networks">
             <li>
