Adjustment of main benefits section and content when viewed on desktop

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <img src="assets/images/two-girls-laughing.jpg" alt="Two young ladies laugh after a workout in the gym">
             <div>
-                <h3>Increase your Mental & Physical health <i class="fa-solid fa-heart-pulse"></i></h3>
+                <h3>Increase your Mental & Physical health <hr><i class="fa-solid fa-heart-pulse"></i></h3>
                 <p>
                     Research has found an obvious link between your physical health and your mental health. Doing weekly exercise greatly enhances mental wellbeing, greatly improving own quality of life aswell as those around you.
                 </p>
