--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="You'r local gym and community serving the Woodford and Redbridge area.">
+    <meta name="description" content="Your local gym and community serving the Woodford and Redbridge area.">
     <meta name="keywords" content="gym, classes, exercise, woodford, redbridge, training">
     
     <link rel="stylesheet" href="assets/css/style.css">
