--- a/enquires.html
+++ b/enquires.html
@@ -23,38 +23,43 @@
             <a href="index.html#visit" class="menu-select">Visit</a>
         </nav>
     </header>
-    <section class="form-section">
-        <form method="POST" action="https://formdump.codeinstitute.net/" class="enquires"></form>
+    <div class="form-section">
+        <form method="POST" action="https://formdump.codeinstitute.net/" class="form-section"></form>
             <h2>Submit your enquires and our team will get back to you!</h2>
             <label for="fname" >First Name (Required)</label>
+            <hr>
             <input id="fname" name="first_name" type="text" required class="text-input">
-
+            <hr>
             <label for="lname" >Last Name (Required)</label>
+            <hr>
             <input id="lname" name="last_name" type="text" required class="text-input">
-
+            <hr>
             <label for="email">Email Address (Required)</label>
+            <hr>
             <input type="email" id="email" name="email_address" required class="text-input" >
-
+            <hr>
             <label for="phone">Phone Number (Required)</label>
+            <hr>
             <input type="number" id="phone" name="phone_number" required class="text-input">
-
+            <hr>
             <label for="reason">Please select a reason for contact. (Required)</label>
+            <hr>
             <select name="reason" id="reason" required>
                 <option value="new-membership">Sign up for new membership.</option>
                 <option value="join-class">Join one of our classes.</option>
                 <option value="information">Enquire about all of our services.</option>
                 <option value="chat">Request a call back or meeting.</option>
             </select>
-
+            <hr>
             <label for="additional-information">Any additional information.</label>
-            <br>
-            <textarea name="additional-information" id="additional-information" cols="30" rows="10" placeholder="Any additional information please input here (Not Required)"></textarea>
-
+            <br><hr>
+            <textarea name="additional-information" id="additional-information" class="text-input-large" cols="30" rows="10" placeholder="Any additional information please input here (Not Required)"></textarea>
+            <hr>        
             <label for="data-protection">Confirm you agree to our terms and conditions before proceeding.</label>
             <input type="checkbox" name="data-protection" id="data-protection" required>
-
+            <hr>
             <input type="submit" class="submit-button" value="Send Enquiry!">
-    </section>
+        </div>
     <footer>
         <ul class="social-networks">
             <li>
