Fixed center issues with form and submit button, removed block and align codes

--- a/enquires.html
+++ b/enquires.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <div class="form-section">
-        <form method="POST" action="https://formdump.codeinstitute.net/" class="form-section"></form>
+        <form method="POST" action="https://formdump.codeinstitute.net/" id="form-elements">
             <h2>Submit your enquires and our team will get back to you!</h2>
             <label for="fname" >First Name (Required)</label>
             <hr>
@@ -59,7 +59,8 @@
             <input type="checkbox" name="data-protection" id="data-protection" required>
             <hr>
             <input type="submit" class="submit-button" value="Send Enquiry!">
-        </div>
+        </form>
+    </div>
     <footer>
         <ul class="social-networks">
             <li>
