--- a/enquires.html
+++ b/enquires.html
@@ -40,7 +40,7 @@
             <hr>
             <label for="phone">Phone Number (Required)</label>
             <hr>
-            <input type="number" id="phone" name="phone_number" required class="text-input">
+            <input type="tel" id="phone" name="phone_number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required class="text-input">
             <hr>
             <label for="reason">Please select a reason for contact. (Required)</label>
             <hr>
@@ -77,5 +77,8 @@
             </li>
         </ul>
     </footer>
+
+    <!-- font awsome script -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </body>
 </html>
