--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
     <header>
         <nav id="menu">
-            <a href="index.html" class="active menu-select">Home</a>
-            <a href="#classes" class="menu-select">Classes</a>
+            <a href="index.html" class="active menu-select home-menu">Home</a>
+            <a href="#classes" class="menu-select classes-menu">Classes</a>
             <div>
                 <a href="index.html"><h1 id="logo">Powers Gym</h1></a>
             </div>
-            <a href="enquires.html" class="menu-select">Enquires</a>
-            <a href="#visit" class="menu-select">Visit</a>
+            <a href="enquires.html" class="menu-select enquires-menu">Enquires</a>
+            <a href="#visit" class="menu-select visit-menu">Visit</a>
         </nav>
     </header>
     <div id="treadmil-outer">
