Fix internal links from enquiries page

--- a/enquires.html
+++ b/enquires.html
@@ -15,12 +15,12 @@
     <header>
         <nav id="menu">
             <a href="index.html" class="menu-select home-menu">Home</a>
-            <a href="#classes" class="menu-select classes-menu">Classes</a>
+            <a href="index.html#classes" class="menu-select classes-menu">Classes</a>
             <div>
                 <a href="index.html"><h1 id="logo">Powers Gym</h1></a>
             </div>
             <a href="enquires.html" class="active menu-select enquires-menu">Enquires</a>
-            <a href="#visit" class="menu-select visit-menu">Visit</a>
+            <a href="index.html#visit" class="menu-select visit-menu">Visit</a>
         </nav>
     </header>
     <div class="form-section">
