Fixed missing } on css file and error when selecting drop down box in form.(First option select)

--- a/enquires.html
+++ b/enquires.html
@@ -45,6 +45,7 @@
             <label for="reason">Please select a reason for contact. (Required)</label>
             <hr>
             <select name="reason" id="reason" required>
+                <option value="" selected disabled hidden>Please select an option below</option>
                 <option value="new-membership">Sign up for new membership.</option>
                 <option value="join-class">Join one of our classes.</option>
                 <option value="information">Enquire about all of our services.</option>
