Added README file and information

--- a/index.html
+++ b/index.html
@@ -62,42 +62,42 @@
             <h4>Swimming</h4>
             <h4>4pm - 6pm</h4>
             <h4>All ages</h4>
-            <h4><i class="fa-solid fa-person-swimming"></i></h4>
+            <i class="fa-solid fa-person-swimming"></i>
         </div>
         <div>
             <h3>Tuesday</h3>
             <h4>Yoga</h4>
             <h4>12pm - 2pm</h4>
             <h4>Adults</h4>
-            <h4><i class="fa-solid fa-spa"></i></h4>
+            <i class="fa-solid fa-spa"></i>
         </div>
         <div>
             <h3>Wednesday</h3>
             <h4>Spin</h4>
             <h4>6pm - 8pm</h4>
             <h4>Adults</h4>
-            <h4><i class="fa-solid fa-bicycle"></i></h4>
+            <i class="fa-solid fa-bicycle"></i>
         </div>
         <div>
             <h3>Thursday</h3>
             <h4>Yoga</h4>
             <h4>1pm - 4pm</h4>
             <h4>Adults</h4>
-            <h4><i class="fa-solid fa-spa"></i></h4>
+            <i class="fa-solid fa-spa"></i>
         </div>
         <div>
             <h3>Friday</h3>
             <h4>Swimming</h4>
             <h4>9am - 1pm</h4>
             <h4>Adults</h4>
-            <h4><i class="fa-solid fa-person-swimming"></i></h4>
+            <i class="fa-solid fa-person-swimming"></i>
         </div>
         <div>
             <h3>Saturday</h3>
             <h4>Swimming</h4>
             <h4>All Day</h4>
             <h4>All Ages</h4>
-            <h4><i class="fa-solid fa-person-swimming"></i></h4>
+            <i class="fa-solid fa-person-swimming"></i>
         </div>
     </div>
     <div id="about-us">
