Fixed broken inside link for about us

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="index.html"><h1 id="logo">Powers Gym</h1></a>
             </div>
             <a href="enquires.html" class="menu-select enquires-menu">Enquires</a>
-            <a href="#visit" class="menu-select visit-menu">Visit</a>
+            <a href="#about-us" class="menu-select visit-menu">About us</a>
         </nav>
     </header>
     <div id="treadmil-outer">
