--- a/enquires.html
+++ b/enquires.html
@@ -20,7 +20,7 @@
                 <a href="index.html"><h1 id="logo">Powers Gym</h1></a>
             </div>
             <a href="enquires.html" class="active menu-select enquires-menu">Enquires</a>
-            <a href="index.html#visit" class="menu-select visit-menu">Visit</a>
+            <a href="index.html#about-us" class="menu-select visit-menu">About us</a>
         </nav>
     </header>
     <div class="form-section">
