Notice spelling mistake in Enquiries fixed

--- a/enquiries.html
+++ b/enquiries.html
@@ -19,7 +19,7 @@
             <div>
                 <a href="index.html"><h1 id="logo">Powers Gym</h1></a>
             </div>
-            <a href="enquires.html" class="active menu-select enquires-menu">Enquires</a>
+            <a href="enquiries.html" class="active menu-select enquiries-menu">Enquiries</a>
             <a href="index.html#about-us" class="menu-select visit-menu">About us</a>
         </nav>
     </header>
